--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "gatsby-starter-netlify-cms",
-  "description": "Example Gatsby, and Netlify CMS project",
-  "version": "1.1.3",
-  "author": "Austin Green",
+  "name": "avadata-solutions",
+  "description": "Avadata Solutions",
+  "version": "1.0.0",
+  "author": "Avadata Solutions",
   "dependencies": {
     "bulma": "^0.9.0",
     "gatsby": "^2.20.35",
