Fix CMS config, string -> text

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -104,7 +104,7 @@ collections:
                   {
                     label: "Description / Bio",
                     name: "description",
-                    widget: "string",
+                    widget: "text",
                   },
                 ],
             }
